<resources>
    <string name="app_name">IndScan</string>
    <string name="begin_docum">Begin document scan</string>
    <string name="scanning_an">Scanning and Indexing  Documents  Simplified </string>
    <string name="connected_t">Connected to</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="scanned_doc">Scanned Documents</string>
    <string name="scanned_docs">Scanned Documents :</string>
    <string name="send_to_web">"Send to web portal"</string>
    <string name="apply_filter">Apply filter</string>
    <string name="none">NONE</string>
    <string name="greyscale">GREYSCALE</string>
    <string name="magiccolor">MAGIC COLOR</string>
    <string name="lighten">LIGHTEN</string>
    <string name="pairing_cod">Pairing Code</string>
    <string name="enter_the_p">Enter the paring code on the web portal and continue</string>
    <string name="some_id" translatable="false">

235420
</string>
    <string name="continue1">

Continue
</string>


    <string name="accept_scan">Accept Scan</string>


    <string name="indscan">IndScan</string>
    <string name="connect_to_">Connect to web portal</string>

    <string name="en" translatable="false">

EN
</string>
    <string name="hindi" translatable="false">
हिन्दी
</string>
    <string name="login">

Login
</string>
    <string name="username">

Username
</string>
    <string name="enter_yourusername">

Enter your username
</string>
    <string name="password">

Password
</string>
    <string name="enter_yourpass">

Enter your password
</string>
    <string name="twof">
        Setup 2-factor \n authentication
</string>
    <string name="googleauth">

Enter the secret key on your google authenticator
</string>
    <string name="h4b2h4k6vb3">

3h4b2h4k6vb3kh42bk2hb3h2
</string>
    <string name="entergen">

Enter Generated 2FA Code
</string>




</resources>