<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/pairing_cod"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"


        android:fontFamily="@font/gilroyextrabold"
        android:text="@string/pairing_cod"

        android:textAlignment="center"

        android:textAppearance="@style/pairing_cod"
        android:textSize="@dimen/Pairing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/enter_the_p"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="530dp"
        android:fontFamily="@font/gilroysb"
        android:gravity="center_horizontal|top"
        android:text="@string/enter_the_p"
        android:textAppearance="@style/enter_the_p"
        android:textSize="@dimen/connectedpair"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pairing_cod"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="156dp"

        android:fontFamily="@font/klartextmono"
        android:gravity="top"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_the_p" />

    <View
        android:id="@+id/rectangle_9"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rectangle_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_id"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/continueword"
        android:layout_width="79dp"
        android:layout_height="25.12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/SendtoWeb"
        android:textAlignment="center"
        android:fontFamily="@font/gilroyb"
        android:text="@string/continue1"
        android:textAppearance="@style/continue1"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_9"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_9"
        app:layout_constraintStart_toStartOf="@+id/rectangle_9"
        app:layout_constraintTop_toTopOf="@+id/rectangle_9" />

    <View
        android:id="@+id/icons8_logi"
        android:layout_width="0dp"
        android:layout_height="37.22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/whitearrowicon"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_9"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_9"
        app:layout_constraintStart_toEndOf="@+id/continueword"
        app:layout_constraintTop_toTopOf="@+id/rectangle_9" />


</androidx.constraintlayout.widget.ConstraintLayout>