<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEEF1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/indscan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/cdsemi"
        android:gravity="top"
        android:text="@string/indscan"
        android:textAppearance="@style/indscan"
        android:textSize="@dimen/Indscan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/scanning_an"
        android:layout_width="237dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="102dp"
        android:fontFamily="@font/gilroym"
        android:gravity="top"
        android:text="@string/scanning_an"
        android:textAppearance="@style/scanning_an"
        android:textSize="@dimen/Scansearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="366dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="553dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/image_1"
        android:layout_width="329dp"
        android:layout_height="385dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="155dp"
        android:background="@drawable/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_2"

        android:layout_width="313dp"
        android:layout_height="59dp"

        android:layout_marginStart="48dp"
        android:layout_marginTop="634dp"

        android:layout_marginBottom="27dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647">


    </View>

    <TextView
        android:id="@+id/begin_docum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:layout_marginTop="577dp"
        android:fontFamily="@font/gilroym"
        android:gravity="top"
        android:text="@string/begin_docum"
        android:textAppearance="@style/begin_docum"
        android:textSize="@dimen/Docscan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/connect_to_"
        android:layout_width="197dp"
        android:layout_height="26dp"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="650dp"
        android:fontFamily="@font/gilroyb"
        android:gravity="center_horizontal"
        android:text="@string/connect_to_"
        android:textAlignment="center"
        android:textAppearance="@style/connect_to_"
        android:textSize="@dimen/webportal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/icons8_qr_c"
        android:layout_width="57dp"
        android:layout_height="53dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="628dp"
        android:background="@drawable/img_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>