<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEEF1"


    tools:context=".MainActivity">


    <View
        android:id="@+id/white_rectangle_1"
        android:layout_width="411dp"
        android:layout_height="112dp"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/white_rectangle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/icons8_go_b"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/img_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/applyfilter"

        android:layout_width="195dp"
        android:layout_height="46dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/clash_display"
        android:gravity="top"

        android:text="@string/apply_filter"
        android:textAppearance="@style/apply_filte"
        android:textSize="@dimen/appley_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <View
        android:id="@+id/rectangle_123"
        android:layout_width="333dp"
        android:layout_height="196dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="511dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="278dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/icons8_go_b3"
        android:layout_width="51dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="270dp"
        android:layout_marginTop="611dp"
        android:background="@drawable/img_8"
        android:rotationY="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/image_16"
        android:layout_width="314dp"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="203dp"
        android:background="@drawable/scanned_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/icons8_rota"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="224dp"
        android:layout_marginTop="420dp"
        android:alpha="0.4"
        android:background="@drawable/img_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/icons8_rotay"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="420dp"
        android:alpha="0.4"
        android:background="@drawable/img_3"
        android:rotationY="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/image_18"
        android:layout_width="49dp"
        android:layout_height="34.46dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="530dp"
        android:background="@drawable/imggreyscale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/scanimg2"
        android:layout_width="49dp"
        android:layout_height="34.46dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="530dp"
        android:background="@drawable/imggreyscale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/scanimg3"
        android:layout_width="49dp"
        android:layout_height="34.46dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="285dp"
        android:layout_marginTop="529dp"
        android:background="@drawable/imggreyscale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/scanimag4"
        android:layout_width="49dp"
        android:layout_height="34.46dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="218dp"
        android:layout_marginTop="529dp"
        android:background="@drawable/imggreyscale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scanned_doc"
        android:layout_width="252dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="81dp"
        android:layout_marginTop="140dp"

        android:fontFamily="@font/gilroysb"
        android:text="@string/scanned_doc"
        android:textAlignment="center"
        android:textAppearance="@style/scanned_doc"
        android:textSize="@dimen/scandocapplyfilterpg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accept_scan"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="624dp"
        android:fontFamily="@font/gilroyb"
        android:text="@string/accept_scan"
        android:textAlignment="center"
        android:textAppearance="@style/accept_scan"
        android:textSize="@dimen/acceptscan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="568dp"
        android:fontFamily="@font/gilroym"
        android:gravity="top"
        android:text="@string/none"
        android:textAppearance="@style/none"
        android:textSize="@dimen/none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greyscale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="569dp"
        android:fontFamily="@font/gilroym"
        android:gravity="top"
        android:text="@string/greyscale"
        android:textAppearance="@style/none"
        android:textSize="@dimen/none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/magiccolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="213dp"
        android:layout_marginTop="569dp"
        android:fontFamily="@font/gilroym"
        android:gravity="top"
        android:text="@string/magiccolor"
        android:textAppearance="@style/none"
        android:textSize="@dimen/none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="295dp"
        android:layout_marginTop="569dp"
        android:fontFamily="@font/gilroym"
        android:gravity="top"
        android:text="@string/cool"
        android:textAppearance="@style/none"
        android:textSize="@dimen/none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>